2007-12-02  Satoshi Nakagawa <artension@gmail.com>

	Added compatibility stuff for old RubyCocoa releases.
	Refactoring.

2007-12-02  Satoshi Nakagawa <artension@gmail.com>

	Rewrote build scripts.

2007-12-02  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the nick sheet won't show after right clicked on a log view

2007-12-01  Satoshi Nakagawa <artension@gmail.com>

	Refactoring utility scripts.

2007-12-01  Satoshi Nakagawa <artension@gmail.com>

	Changed to use pathname in filelogger.rb.

2007-12-01  Satoshi Nakagawa <artension@gmail.com>

	Changed to highlight a current nickname in priority.
	Fixed a nil access bug, when the parameters of a message are too few.

2007-11-30  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, an empty string should be rejected for a raw command.
	Improved key event handlers to use symbols instead of strings.

2007-11-30  Satoshi Nakagawa <artension@gmail.com>

	Now privmsg command is the default setting for pasting on non-Japanese environment.

2007-11-30  Satoshi Nakagawa <artension@gmail.com>

	Changed to use 1 instead of NSURLRequestReloadIgnoringLocalCacheData.
	Improved SACrashReporter to send a ruby version and a RubyCocoa version.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Changed to send current nickname for Pastie.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Changed error messages on a paste dialog.
	Changed to not show number of count down on a paste dialog.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Changed a paste dialog to remain showed while requesting to Pastie.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Changed PastieClient to send form-encoded.
	Added Perl, Haskell and Scheme for pastie syntax.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, a size of a paste sheet should be stored in a content size not a frame.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, pasting by notice or privmsg didn't work.
